--- a/encode/index.html
+++ b/encode/index.html
@@ -1,6 +1,10 @@
 <html>
+  <head>
+    <script src="https://peterolson.github.io/BigInteger.js/BigInteger.min.js"></script>
+  </head>
   <body>
     <canvas id='canvas'></canvas>
     <script src="encode/main.js" charset="utf-8"></script>
+    <p id='output'></p>
   </body>
 </html>
