--- a/decode/index.html
+++ b/decode/index.html
@@ -1,6 +1,9 @@
 <html>
   <body>
     <canvas id='canvas'></canvas>
-    <script src="decode/main.js" charset="utf-8"></script>
+    <br />
+    <input id='input' type='text'></input>
+    <button onClick='render()'>plot</button>
+    <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
