--- a/encode/index.html
+++ b/encode/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <canvas id='canvas'></canvas>
-    <script src="encode/main.js" charset="utf-8"></script>
+    <script src="main.js" charset="utf-8"></script>
     <p id='output'></p>
   </body>
 </html>
